# contest

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/competition/: asgi.py  settings.py  urls.py  wsgi.py
src/contest/: admin.py  models.py  permissions.py  seriallizers.py  viewsets.py
src/contest/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_mootcourt_status_moot_court_alter_mootcourt_status.py  0005_alter_mootcourt_status.py  0006_alter_mootcourt_created_at.py  0007_alter_mootcourt_tags.py
src/guides/: admin.py  models.py
src/guides/migrations/: 0001_initial.py  0002_remove_tag_created_at_tag_name.py
src/service/: admin.py  models.py  serializers.py  signals.py
src/service/migrations/: 0001_initial.py  0002_initial.py  0003_remove_channel_date_created_and_more.py  0004_delete_tag.py
src/users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
src/users/migrations/: 0001_initial.py  0002_participantprofile_alter_profile_first_name_and_more.py  0003_profile_date_joined.py  0004_remove_profile_date_joined_alter_profile_created_at_and_more.py  0005_profile_is_active.py
